--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <a href="work.html"><li>Works</li></a>
             <a href="contact.html"><li>Contact</li></a>
             <a href="network.html"><li>Network</li></a>
+            <a href="network.html"><li>Network</li></a>
           </ul>
         </div>
       </nav>
