--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>APPPPPLE</title>
+    <title>HI WORLD</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
+      <!-- <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
@@ -18,17 +18,17 @@
           <span class="icon-bar"></span>
         </button>
         <img id=logo src="https://image.freepik.com/free-icon/apple-logo_318-40184.jpg" alt="">
-      </div>
+      </div> -->
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
           <ul id="menu">
-            <a href="index.html"><li>About</li></a>
-            <a href="work.html"><li>Works</li></a>
-            <a href="contact.html"><li>Contact</li></a>
-            <a href="network.html"><li>Network</li></a>
-            <a href="network.html"><li>Network</li></a>
+            <a href="index.html"><li>ABOUT</li></a>
+            <a href="work.html"><li>BRANDING DESIGN</li></a>
+            <a href="contact.html"><li>PACKAGING DESIGN</li></a>
+            <a href="network.html"><li>WEB DESIGN</li></a>
+            <a href="network.html"><li>PHOTOGRAPHY</li></a>
           </ul>
         </div>
       </nav>
@@ -86,8 +86,21 @@
   </a>
 </div>
 
-  <h1>WE ARE ROLLS</h1>
+  <!-- <h1>WORKS</h1> -->
+
     <div class="row">
+      <div class="col-xs-6 col-md-3">
+        <a href="#" class="thumbnail">
+          <img src="https://site2img-api.herokuapp.com/parse/files/MqX4RIjBpnVgUg9lRrxmWRsDVmqR5SCOaYmnSpnx/2ba43291aa42c2e1e11e268e780a5e96_img.png" alt="...">
+          <img src="https://site2img-api.herokuapp.com/parse/files/MqX4RIjBpnVgUg9lRrxmWRsDVmqR5SCOaYmnSpnx/2ba43291aa42c2e1e11e268e780a5e96_img.png" alt="...">
+          <img src="https://site2img-api.herokuapp.com/parse/files/MqX4RIjBpnVgUg9lRrxmWRsDVmqR5SCOaYmnSpnx/2ba43291aa42c2e1e11e268e780a5e96_img.png" alt="...">
+        </a>
+      </div>
+      ...
+    </div>
+
+
+<!-- <div class="row">
   <div class="col-md-1 col-sm-3 col-xs-6">.col-md-1</div>
   <div class="col-md-1 col-sm-3 col-xs-6">.col-md-1</div>
   <div class="col-md-1 col-sm-3 col-xs-6">.col-md-1</div>
@@ -100,7 +113,7 @@
   <div class="col-md-1 col-sm-3 col-xs-6">.col-md-1</div>
   <div class="col-md-1 col-sm-3 col-xs-6">.col-md-1</div>
   <div class="col-md-1 col-sm-3 col-xs-12">.col-md-1</div>
-</div>
+</div> -->
 
     <script type="text/javascript" src="js/jquery-1.12.4.min.js">
     </script>
